# semIII

pp/List1/: list1.sc  zad2.ml  zad3.ml
pp/List2/: list2.sc  zad2a.ml
pp/List2/exc/: list2.sc
pp/List2/lab/: list2.sc  zad1.ml  zad2b.ml
pp/List3/: mod3.ml  zad2.sc
pp/List4/: kb.sc  zad.sc
pp/exam/src/: list1.sc  list3.sc  list5.sc  list9.sc  main.scala
pp/list1/exc/: list1.sc
pp/list1/lab/: mod1.ml  zad1.ml  zad4.ml
pp/list10/: zad1.sc  zad2.sc
pp/list2/lab/: list2.sc  mod2.sc
pp/list3/: zad1.ml  zad2.ml
pp/list4/: zad.sc  zad1.ml
pp/list5/: zad1.list5.ml  zad2.sc
pp/list6/: zad1.sc  zad2.list6.ml  zad2.sc
pp/list6/.metals/: metals.mv.db
pp/list7/: zad1.list7.ml
pp/list9/src/: InvalidInput.scala  Splitter.scala  (+1 more)
tep/: CMakeLists.txt
tep/generic.algorithm/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
tep/generic.algorithm/algorithm/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h
tep/generic.algorithm/problems/: CapacityProblem.cpp  CapacityProblem.h  KnapsackProblem.cpp  KnapsackProblem.h
tep/generic.algorithm/problems.example/: example1.txt
tep/list1/: CMakeLists.txt  utils.cpp  utils.h
tep/list1/zad1/: zad1.cpp  zad1.h
tep/list1/zad2/: zad2.cpp  zad2.h
tep/list1/zad3/: zad3.cpp  zad3.h
tep/list1/zad4/: zad4.cpp  zad4.h
tep/list2/: CMakeLists.txt  main.cpp  main.h  mod.cpp  mod.h
tep/list3/: CMakeLists.txt  Tree.cpp  Tree.h  dynamic.cpp  dynamic.h  node.cpp  node.h
tep/list4/: CMakeLists.txt  generic.cpp  generic.h  temp.cpp
tep/list5/: CMakeLists.txt  list5.cpp  list5.h  mod.cpp  mod.h
tep/zad1/: zad1.cpp  zad1.h
(+14 files in other folders)
